syntax = "proto3";

option java_package = "com.cash.grpc.catalogue";
option java_multiple_files = true;
option java_outer_classname = "CatalogueServiceProto";

package catalogue;

service CatalogueService {
  rpc GetAllItems(Empty) returns (ItemList);
  rpc SearchItems(SearchRequest) returns (ItemList);
  rpc CreateItem(CreateItemRequest) returns (ItemResponse);
}

message Empty {}

message SearchRequest {
  string keyword = 1;
}

message CreateItemRequest {
  string title = 1;
  string description = 2;
  int32 duration_hours = 4;
  int32 seller_id = 5;
}

message ItemResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  int32 starting_price = 4;
  int32 current_price = 5;
  bool active = 6;
  int32 duration_hours = 7;
  string created_at = 8;
  string end_time = 9;
  int32 seller_id = 10;
  int32 remaining_time_seconds = 11;
  int32 shipping_cost = 12;
  int32 shipping_time = 13;
}

message ItemList {
  repeated ItemResponse items = 1;
}
